# PyMEM

./: .bumpversion.cfg  .coveragerc  LICENSE  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: ci.yml  lint.yml  publish-docker.yml
docker/: Dockerfile
example/: Makefile  clean.sh  run.sh  test.py  test.sh  ttbar.mg5
src/pymela/: commandline.py  version.py
tests/: test_cli.py  test_import.py
