[metadata]
name = pymela
version = 0.0.1
description = Pure-Python Matrix Element Likelihood Analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scailfin/pyMELA
author = Matthew Feickert
author_email = matthew.feickert@cern.ch
license = Apache
license_file = LICENSE
keywords = python physics matrix-element
project_urls =
    Documentation = https://scailfin.github.io/pyMELA/
    Source = https://github.com/scailfin/pyMELA
    Tracker = https://github.com/scailfin/pyMELA/issues
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[bdist_wheel]
universal = 1

[options]
setup_requires =
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    click>=6.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pymela = pymela.commandline:pymela

[build_sphinx]
project = pymela
source-dir = docs
build-dir = docs/_build
all-files = 1
warning-is-error = 1
